fix landing and newcall pages on mobile

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1319,6 +1319,12 @@ textarea.form-input {
   color: #292b32;
 }
 
+.invert-color .form-checkbox input:checked,
+.invert-color .form-radio input:checked {
+  /*background-color: !important;*/
+  /*border-color: !important*/
+}
+
 .form-group {
   display: flex;
 }
@@ -1992,6 +1998,14 @@ textarea.form-input {
   padding: 32px 24px;
 }
 
+@media (max-width: 640px) {
+
+  .section:first-of-type {
+    min-height: calc(100vh - (80px/2));
+  }
+  
+}
+
 .site-header {
   position: absolute !important;
   top: 0;
@@ -2073,6 +2087,9 @@ textarea.form-input {
 }
 
 @media (max-width: 640px) {
+  .header-nav-toggle {
+    display: block;
+  }
 
   .header-nav-toggle + .header-nav {
     flex-direction: column;
@@ -2317,8 +2334,8 @@ textarea.form-input {
 
 .section-inner {
   position: relative;
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .section-header {
@@ -2558,12 +2575,12 @@ ul.pricing-item-features-list li {
 }
 
 .cta .section-inner {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .cta-slogan {
-  margin-bottom: 15px;
+  margin-bottom: 40px;
 }
 
 @media (min-width: 641px) {
